# vk

./: .gitignore  CMakeLists.txt
app/: CMakeLists.txt  app.cpp  app.h  application.cpp  application.hpp  main.cpp  vertex.hpp  vk_device.cpp  vk_device.hpp  vk_render.cpp  vk_render.hpp
cmake/: FindGLFW3.cmake
resources/: CMakeLists.txt
shaders/: CMakeLists.txt  shader.frag  shader.vert
